html and body height set to 100% instead of 100vh and fixed region selct on welcome screen being too long on mobile

--- a/resources/stylesheets/main.scss
+++ b/resources/stylesheets/main.scss
@@ -31,11 +31,9 @@
     font-style: normal;
 }
 
-// Fixes an issue where clicking a select2 adds 
-// horizontal scrolling to whitespace
-body {
-    overflow-x:hidden; 
-    height: 100vh;
+body, html {
+    overflow-x: hidden; 
+    height: 100%;
 }
 
 header {
