--- a/resources/stylesheets/product_concepts.scss
+++ b/resources/stylesheets/product_concepts.scss
@@ -12,7 +12,7 @@
     letter-spacing: 0px;
     color: #263063;
     opacity: 1;
-    margin: 65px 25% 0 25%;
+    margin: 65px 25%;
 }
 
 // Container for the route, strength, dosage, and form selects
